# opencvtest

./: CMakeLists.txt  README.md
examples/01_hello_world/: CMakeLists.txt  main.cpp
